[106578] Improve handling of security VM arguments.  Moves management of security args to TomcatServerBehaviour.